--- a/index.html
+++ b/index.html
@@ -251,6 +251,86 @@ main.container {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ✅ Corrections pour la responsivité des compteurs */
+.volume,
+.highlight {
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: clamp(1.5rem, 6vw, 2.5rem);
+  text-align: center;
+  padding: 0.5rem 1rem;
+}
+
+.icon-box {
+  width: 50px;
+  height: 50px;
+}
+
+.value-liters,
+.value-piscines {
+  min-width: auto; /* supprime la largeur forcée */
+  font-size: clamp(1rem, 4vw, 1.5rem);
+}
+
+/* Ajustements spécifiques aux écrans étroits */
+@media (max-width: 600px) {
+  .volume,
+  .highlight {
+    flex-direction: column;
+    gap: 0.5rem;
+    font-size: 1.5rem;
+  }
+
+  .icon-box {
+    width: 40px;
+    height: 40px;
+  }
+
+  .value {
+    text-align: center;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </style>
 </head>
 <body>
