--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ main.container {
   /* Container principal */
   .container {
     flex: 1;
-
+    padding: 3rem 2rem;
     width: 90%;
     margin: 2rem auto;
     background: rgba(255,255,255,0.75);
     border-radius: 1.5rem;
     box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-    padding: 0rem 0rem; /* ⬅ plus de marge interne sur les côtés */
+    
     padding-top: 3rem;
     text-align: center;
     backdrop-filter: blur(10px);
@@ -564,3 +564,4 @@ main.container {
 
 </body>
 </html>
+
