--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ main.container {
   /* Container principal */
   .container {
     flex: 1;
-    padding: 3rem 2rem;
+    padding: 0rem 0rem;
     width: 90%;
     margin: 2rem auto;
     background: rgba(255,255,255,0.75);
@@ -75,8 +75,8 @@ main.container {
     text-align: center;
     backdrop-filter: blur(10px);
   }
-  h1 { font-weight: 800; font-size: 2rem; margin-bottom: 1rem; color: #075985; }
-  .desc { font-size: 1.1rem; margin-bottom: 1rem; color: #0c4a6e; }
+  h1 { font-weight: 800; font-size: 1.5rem; margin-bottom: 1rem; color: #075985; }
+  .desc { font-size: 1.1rem; margin-bottom: 1rem; color: #0c4a6e; padding: 0rem 2rem; }
 
   /* Volume et piscines */
   .volume { font-size: 4rem; font-weight: 900; color: #0284c7; margin: 1rem 0; }
@@ -564,5 +564,6 @@ main.container {
 
 </body>
 </html>
+
 
 
