--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
 
 
@@ -44,7 +45,7 @@
 </header>
 
 
-
+<main>
 
  <section class="long-section">
     <h1>Bienvenue dans la section longue</h1>
@@ -67,7 +68,7 @@
 
 
 
-
+</main>
 
 
 
