--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <section class="section-1">
   <div class="section-1-container">
-    <h1 class="section-1-title">Contactez-moi</h1>
+    <h1 class="section-1-title">Me contacter</h1>
     <p class="section-1-text">
       Vous cherchez à me contacter? Veuillez utiliser le formulaire ci dessous et je veillerais à vous recontacter ou répondre à votre demande dans les plus brefs délais.
     </p>
