--- a/index.html
+++ b/index.html
@@ -61,15 +61,10 @@
 
 
 
-<div class="horizontal-bar-container">
-  <div class="horizontal-bar"></div>
-</div>
-
-
 
 <section class="section-1">
   <div class="section-1-container">
-    <h1 class="section-1-title">Me contacter</h1>
+    <h1 class="section-1-title">Formulaire de contact</h1>
     <p class="section-1-text">
       Vous cherchez à me contacter? Veuillez utiliser le formulaire ci dessous et je veillerais à vous recontacter ou répondre à votre demande dans les plus brefs délais.
     </p>
