--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   }
 
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
 }
 
   @keyframes gradientMove {
@@ -565,4 +565,5 @@ main.container {
 
 </body>
 </html>
+
 
